kube/config/service-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-admin
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-admin
  template:
    metadata:
      labels:
        app: service-admin
    spec:
      shareProcessNamespace: true
      containers:
        - name: service-admin
          image: ghcr.io/${GITHUB_REPO}/${ADMIN_IMAGE}:latest
          imagePullPolicy: Always
          ports:
          - name: web
            protocol: TCP
            containerPort: 3001
          - name: sse
            protocol: TCP
            containerPort: 3002
          readinessProbe:
            httpGet: 
              port: web
              path: /ready
          livenessProbe:
            httpGet:
              port: web
              path: /ready
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
             requests:
               memory: "256Mi"
               cpu: "100m"
             limits:
               memory: "512Mi"
               cpu: "500m"
        # Comment if not using OpenTelemetry
        - name: otel-go-auto-instrumentation
          image: otel/autoinstrumentation-go:latest # Use a specific version in production
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
            privileged: true
          resources:
             requests:
               memory: "64Mi"
               cpu: "50m"
             limits:
               memory: "256Mi"
               cpu: "200m"
      imagePullSecrets:
        - name: regcred
