kube/config/service-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-client
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-client
  template:
    metadata:
      labels:
        app: service-client
    spec:
      containers:
        - name: service-client
          image: ghcr.io/${GITHUB_REPO}/${CLIENT_IMAGE}:latest
          imagePullPolicy: Always
          ports:
          - name: web
            protocol: TCP
            containerPort: 3000
          readinessProbe:
            httpGet:
              port: web
              path: /login
          livenessProbe:
            httpGet:
              port: web
              path: /login
            initialDelaySeconds: 15
            periodSeconds: 20
      imagePullSecrets:
        - name: regcred
