kube/config/service-core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-core
  namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      app: service-core
  template:
    metadata:
      labels:
        app: service-core
    spec:
      shareProcessNamespace: true
      containers:
        - name: service-core
          image: ghcr.io/${GITHUB_REPO}/${CORE_IMAGE}:latest
          imagePullPolicy: Always
          ports:
          - name: web
            protocol: TCP
            containerPort: 4001
          - name: grpc
            protocol: TCP
            containerPort: 4002
          readinessProbe:
            httpGet: 
              port: web
              path: /ready
          livenessProbe:
            httpGet:
              port: web
              path: /ready
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
             requests:
               memory: "256Mi"
               cpu: "100m"
             limits:
               memory: "512Mi"
               cpu: "500m"
        # Comment if not using OpenTelemetry
        - name: otel-go-auto-instrumentation
          image: otel/autoinstrumentation-go:latest # Use a specific version in production
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
            privileged: true
          resources:
             requests:
               memory: "64Mi"
               cpu: "50m"
             limits:
               memory: "256Mi"
               cpu: "200m"
      # Uncomment if using Google Cloud SQL
      #   - name: cloud-sql-proxy
      #     image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.16.0
      #     args:
      #       - "--structured-logs"
      #       - "${CLOUD_SQL_CONNECTION_NAME}"
      #       - "--credentials-file=/secrets/gcp/key.json"
      #     securityContext:
      #       runAsUser: 65532
      #       allowPrivilegeEscalation: false
      #     resources:
      #        requests:
      #          memory: "64Mi"
      #          cpu: "50m"
      #        limits:
      #          memory: "256Mi"
      #          cpu: "200m"
      #     volumeMounts:
      #       - name: gcp-sa-key-volume
      #         mountPath: /secrets/gcp/
      #         readOnly: true
      # volumes:
      #   - name: gcp-sa-key-volume
      #     secret:
      #       secretName: gcp-sa-key
      imagePullSecrets:
        - name: regcred
